# Copyright (C) 2004, 2005 NetXMS Team <bugs@netxms.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

mibsdir=$(pkgdatadir)/mibs

mibs_DATA = \
	A3COM-HUAWEI-COMMON-MIB.mib \
	A3COM-HUAWEI-CONFIG-MAN-MIB.mib \
	A3COM-HUAWEI-DEVICE-MIB.mib \
	A3COM-HUAWEI-ENTITY-EXT-MIB.mib \
	A3COM-HUAWEI-ENTITY-VENDORTYPE-OID-MIB.mib \
	A3COM-HUAWEI-IF-EXT-MIB.mib \
	A3COM-HUAWEI-IP-ADDRESS-MIB.mib \
	A3COM-HUAWEI-IP-MIB.mib \
	A3COM-HUAWEI-IPV6-ADDRESS-MIB.mib \
	A3COM-HUAWEI-OBJECT-INFO-MIB.mib \
	A3COM-HUAWEI-OID-MIB.mib \
	A3COM-HUAWEI-SSH-MIB.mib \
	A3COM-HUAWEI-STACK-MIB.mib \
	A3COM-HUAWEI-SYS-MAN-MIB.mib \
	A3COM-HUAWEI-SYSLOG-MIB.mib \
	A3COM-HUAWEI-TRAP-MIB.mib \
	A3Com-products-MIB.mib \
	AAC-MIB.mib \
	ACLMGMT-MIB.mib \
	AGENT-GENERAL-MIB.mib \
	AI-AP-MIB.mib \
	AIRESPACE-REF-MIB.mib \
	AIRESPACE-SWITCHING-MIB.mib \
	AIRESPACE-WIRELESS-MIB.mib \
	APACHE2-MIB.mib \
	APPLICATION-MIB.mib \
	ARCADA-MIB.mib \
	ARP-Spoofing-Prevent-MIB.mib \
	ARUBA-MGMT-MIB.mib \
	ARUBA-MIB.mib \
	ARUBA-TC.mib \
	ASTARO-MIB.mib \
	ASTERISK-MIB.mib \
	AtiL2-MIB.mib \
	ATM-TC-MIB.mib \
	AUTH-MIB.mib \
	BASP-Config-MIB.mib \
	BAY-STACK-ADAC-MIB.mib \
	BAY-STACK-ARP-INSPECTION-MIB.mib \
	BAY-STACK-DHCP-SNOOPING-MIB.mib \
	BAY-STACK-ECMP-MIB.mib \
	BAY-STACK-ERROR-MESSAGE-MIB.mib \
	BAY-STACK-LACP-EXT-MIB.mib \
	BAY-STACK-MIB.mib \
	BAY-STACK-MULTICAST-FLOODING-MIB.mib \
	BAY-STACK-NOTIFICATIONS-MIB.mib \
	BAY-STACK-OSPF-EXT-MIB.mib \
	BAY-STACK-PETH-EXT-MIB.mib \
	BAY-STACK-RADIUS-MIB.mib \
	BAY-STACK-SOURCE-GUARD-MIB.mib \
	BAY-STACK-STATS-MIB.mib \
	BAY-STACK-VRRP-EXT-MIB.mib \
	BD-MIB.mib \
	BGP4-MIB.mib \
	BGP4V2-MIB.mib \
	BGP4V2-TC-MIB.mib \
	BN-IF-EXTENSIONS-MIB.mib \
	BPDU-PROTECTION-MIB.mib \
	BPDU-TUNNELING-MIB.mib \
	BRCD-DOT1X-MIB.mib \
	BRCD-FCIP-EXT-MIB.mib \
	Brcm-adapterInfo-MIB.mib \
	Brcm-BSAPTrap-MIB.mib \
	BRIDGE-MIB.mib \
	BROCADE-ENTITY-OID-MIB.mib \
	BROCADE-IPSEC-MIB.mib \
	BROCADE-MAPS-MIB.mib \
	BROCADE-MCT-CLUSTER-MIB.mib \
	BROCADE-SPX-MIB.mib \
	BROCADE-STACK-ISSU-MIB.mib \
	BROCADE-SYSLOG-MIB.mib \
	Brocade-REG-MIB.mib \
	Brocade-TC.mib \
	CABLE-DIAG-MIB.mib \
	CAMBIUM-MIB.mib \
	CAMBIUM-PMP80211-MIB.mib \
	CDX-6500-COMMON-MIB.mib \
	CFMEXTENSION-MIB.mib \
	CHECKPOINT-NG-MIB.mib \
	CISCO-BRIDGE-EXT-MIB.mib \
	CISCO-C2900-MIB.mib \
	CISCO-CDP-MIB.mib \
	CISCO-CLUSTER-MIB.mib \
	CISCO-ENTITY-ALARM-MIB.mib \
	CISCO-ENTITY-ASSET-CAPABILITY.mib \
	CISCO-ENTITY-ASSET-MIB.mib \
	CISCO-ENTITY-CAPABILITY.mib \
	CISCO-ENTITY-DIAG-CAPABILITY.mib \
	CISCO-ENTITY-DIAG-MIB.mib \
	CISCO-ENTITY-DIAG-TC-MIB.mib \
	CISCO-ENTITY-DISPLAY-CAPABILITY.mib \
	CISCO-ENTITY-DISPLAY-MIB.mib \
	CISCO-ENTITY-EXT-CAPABILITY.mib \
	CISCO-ENTITY-EXT-MIB.mib \
	CISCO-ENTITY-FRU-CONTROL-CAPABILITY.mib \
	CISCO-ENTITY-FRU-CONTROL-MIB.mib \
	CISCO-ENTITY-PERFORMANCE-MIB.mib \
	CISCO-ENTITY-PFE-MIB.mib \
	CISCO-ENTITY-PROVISIONING-MIB.mib \
	CISCO-ENTITY-QFP-MIB.mib \
	CISCO-ENTITY-REDUNDANCY-MIB.mib \
	CISCO-ENTITY-REDUNDANCY-TC-MIB.mib \
	CISCO-ENTITY-SENSOR-CAPABILITY.mib \
	CISCO-ENTITY-SENSOR-EXT-MIB.mib \
	CISCO-ENTITY-SENSOR-HISTORY-MIB.mib \
	CISCO-ENTITY-SENSOR-MIB.mib \
	CISCO-ENTITY-SENSOR-RFC-CAPABILITY.mib \
	CISCO-ENTITY-VENDORTYPE-OID-MIB.mib \
	CISCO-ENVMON-MIB.mib \
	CISCO-FABRICPATH-TOPOLOGY-MIB.mib \
	CISCO-HSRP-EXT-MIB.mib \
	CISCO-HSRP-MIB.mib \
	CISCO-IETF-IP-MIB.mib \
	CISCO-IF-EXTENSION-MIB.mib \
	CISCO-IP-IF-MIB.mib \
	CISCO-L2L3-INTERFACE-CONFIG-MIB.mib \
	CISCO-MAC-NOTIFICATION-MIB.mib \
	CISCO-MEMORY-POOL-MIB.mib \
	CISCO-OTV-MIB.mib \
	CISCO-PING-MIB.mib \
	CISCO-PRIVATE-VLAN-MIB.mib \
	CISCO-PROCESS-MIB.mib \
	CISCO-PRODUCTS-MIB.mib \
	CISCO-QOS-PIB-MIB.mib \
	CISCO-SMI.mib \
	CISCO-STACK-MIB.mib \
	CISCO-STACKMAKER-MIB.mib \
	CISCO-STACKWISE-MIB.mib \
	CISCO-STP-EXTENSIONS-MIB.mib \
	CISCO-SWITCH-CGMP-MIB.mib \
	CISCO-SYSLOG-MIB.mib \
	CISCO-TC.mib \
	CISCO-TCP-MIB.mib \
	CISCO-VLAN-BRIDGE-MIB.mib \
	CISCO-VLAN-BRIDGING-CAPABILITY.mib \
	CISCO-VLAN-BRIDGING-MIB.mib \
	CISCO-VLAN-GROUP-CAPABILITY.mib \
	CISCO-VLAN-GROUP-MIB.mib \
	CISCO-VLAN-IFTABLE-RELATIONSHIP-CAPABILITY.mib \
	CISCO-VLAN-IFTABLE-RELATIONSHIP-MIB.mib \
	CISCO-VLAN-MEMBERSHIP-CAPABILITY.mib \
	CISCO-VLAN-MEMBERSHIP-MIB.mib \
	CISCO-VLAN-TRANSLATION-CAPABILITY.mib \
	CISCO-VLAN-TRANSLATION-MIB.mib \
	CISCO-VTP-MIB.mib \
	CISCOSB-BRIDGEMIBOBJECTS-MIB.mib \
	CISCOSB-CPU-COUNTERS-MIB.mib \
	CISCOSB-DEVICEPARAMS-MIB.mib \
	CISCOSB-HWENVIROMENT.mib \
	CISCOSB-LLDP-MIB.mib \
	CISCOSB-MIB.mib \
	CISCOSB-Physicaldescription-MIB.mib \
	CISCOSB-SYSMNG-MIB.mib \
	CISCOSB-TRAPS-MIB.mib \
	CISCOSB-rlInterfaces.mib \
	CISCOSB-vlan-MIB.mib \
	CONFIG-MIB.mib \
	Console-Monitoring-MIB.mib \
	COSINE-GLOBAL-REG.mib \
	COSINE-InVision-MIB.mib \
	COSINE-ORION-MIB.mib \
	CPQHLTH-MIB.mib \
	CPQHOST-MIB.mib \
	CPQPOWER-MIB.mib \
	CPQSINFO-MIB.mib \
	CPQSM2-MIB.mib \
	CPU-PROTECT-MIB.mib \
	CYBEROAM-MIB.mib \
	DDM-MGMT-MIB.mib \
	DELIBERANT-MIB.mib \
	Dell-Vendor-MIB.mib \
	DES3028-L2MGMT-MIB.mib \
	DES3028G-L2MGMT-MIB.mib \
	DES3028P-L2MGMT-MIB.mib \
	DES3052-L2MGMT-MIB.mib \
	DES3052P-L2MGMT-MIB.mib \
	DES3200-10-L2MGMT-MIB.mib \
	DES3200-10-L3MGMT-MIB.mib \
	DES3200-10DC-L2MGMT-MIB.mib \
	DES3200-10DC-L3MGMT-MIB.mib \
	DES3200-18-L2MGMT-MIB.mib \
	DES3200-18-L3MGMT-MIB.mib \
	DES3200-18DC-L2MGMT-MIB.mib \
	DES3200-18DC-L3MGMT-MIB.mib \
	DES3200-26-L2MGMT-MIB.mib \
	DES3200-26-L3MGMT-MIB.mib \
	DES3200-26DC-L2MGMT-MIB.mib \
	DES3200-26DC-L3MGMT-MIB.mib \
	DES3200-28-L2MGMT-MIB.mib \
	DES3200-28-L3MGMT-MIB.mib \
	DES3200-28F-L2MGMT-MIB.mib \
	DES3200-28F-L3MGMT-MIB.mib \
	DES3200-28ME-L2MGMT-MIB.mib \
	DES3200-28ME-L3MGMT-MIB.mib \
	DES3200-28P-L2MGMT-MIB.mib \
	DES3200-28P-L3MGMT-MIB.mib \
	DES3200-52-L2MGMT-MIB.mib \
	DES3200-52-L3MGMT-MIB.mib \
	DES3200-52DC-L2MGMT-MIB.mib \
	DES3200-52DC-L3MGMT-MIB.mib \
	DES3200-52P-L2MGMT-MIB.mib \
	DES3200-52P-L3MGMT-MIB.mib \
	DES3528-L2MGMT-MIB.mib \
	DES3528-SWL3MGMT-MIB.mib \
	DES3528DC-L2MGMT-MIB.mib \
	DES3528DC-SWL3MGMT-MIB.mib \
	DES3528P-L2MGMT-MIB.mib \
	DES3528P-SWL3MGMT-MIB.mib \
	DES3552-L2MGMT-MIB.mib \
	DES3552-SWL3MGMT-MIB.mib \
	DES3552P-L2MGMT-MIB.mib \
	DES3552P-SWL3MGMT-MIB.mib \
	DESKSNMP-MIB.mib \
	DESKTRAP-MIB.mib \
	DGS-3120-24PC-L3MGMT-MIB.mib \
	DGS-3120-24SC-L3MGMT-MIB.mib \
	DGS-3120-24TC-L3MGMT-MIB.mib \
	DGS-3120-48PC-L3MGMT-MIB.mib \
	DGS-3120-48TC-L2MGMT-MIB.mib \
	DGS-3120-48TC-L3MGMT-MIB.mib \
	DGS3120-24PC-L2MGMT-MIB.mib \
	DGS3120-24PC-LED-MIB.mib \
	DGS3120-24SC-L2MGMT-MIB.mib \
	DGS3120-24SC-LED-MIB.mib \
	DGS3120-24TC-L2MGMT-MIB.mib \
	DGS3120-24TC-LED-MIB.mib \
	DGS3120-48PC-L2MGMT-MIB.mib \
	DGS3120-48PC-LED-MIB.mib \
	DGS3120-48TC-LED-MIB.mib \
	DHCP-RELAY-MGMT-MIB.mib \
	DHCP-Server-MIB.mib \
	DHCPv6-RELAY-MGMT-MIB.mib \
	DHCPv6-Server-MIB.mib \
	DIFFSERV-DSCP-TC.mib \
	DIFFSERV-MIB.mib \
	DigiPower-PDU-MIB.mib \
	DIGIUM-MIB.mib \
	DISMAN-EVENT-MIB.mib \
	DISMAN-PING-MIB.mib \
	DISMAN-SCHEDULE-MIB.mib \
	DISMAN-TRACEROUTE-MIB.mib \
	DLB-802DOT11-EXT-MIB.mib \
	DLB-ATHDRV-STATS-MIB.mib \
	DLB-GENERIC-MIB.mib \
	DLB-RADIO3-DRV-MIB.mib \
	DLINK-ID-REC-MIB.mib \
	DLMS-MIB.mib \
	DNSResolver-MIB.mib \
	DOS-PREV-MIB.mib \
	DOT12-IF-MIB.mib \
	DOT12-RPTR-MIB.mib \
	Dot1xMGMT-MIB.mib \
	DOT3-OAM-MIB.mib \
	DS1-MIB.mib \
	DS3-MIB.mib \
	DULD-MIB.mib \
	DVMRP-MIB.mib \
	EdgeSwitch-INVENTORY-MIB.mib \
	EdgeSwitch-LOGGING-MIB.mib \
	EdgeSwitch-REF-MIB.mib \
	EdgeSwitch-SWITCHING-MIB.mib \
	EF-6000-MIB.mib \
	EGRESSACL-MIB.mib \
	EMBEDDED-NGX-MIB.mib \
	ENTITY-MIB.mib \
	ENTITY-SENSOR-MIB.mib \
	ENTITY-STATE-MIB.mib \
	EQUIPMENT-MIB.mib \
	ERD-3.mib \
	ERPS-MIB.mib \
	ES-1000-MIB.mib \
	EtherLike-MIB.mib \
	EtherWAN-ewnSwitchM.mib \
	EXTREME-BASE-MIB.mib \
	EXTREME-EDP-MIB.mib \
	EXTREME-ENTITY-MIB.mib \
	EXTREME-ESRP-MIB.mib \
	EXTREME-FDB-MIB.mib \
	EXTREME-PORT-MIB.mib \
	EXTREME-STACKING-MIB.mib \
	EXTREME-SYSTEM-MIB.mib \
	EXTREME-TRAP-MIB.mib \
	EXTREME-VLAN-MIB.mib \
	FA-EXT-MIB.mib \
	FAN-MIB.mib \
	FC-MGMT-MIB.mib \
	FCMGMT-MIB.mib \
	FDDI-SMT73-MIB.mib \
	FDRY-ACL-MIB.mib \
	FDRY-DAI-MIB.mib \
	FDRY-DHCP-SNOOPING-MIB.mib \
	FDRY-DNS2-MIB.mib \
	FDRY-IP-SOURCE-GUARD-MIB.mib \
	FDRY-IPV6-IP-MIB.mib \
	FDRY-MPLS-L2VPN-MIB.mib \
	FDRY-POE-MIB.mib \
	FDRY-RADIUS-MIB.mib \
	FDRY-SNTP-MIB.mib \
	FDRY-TACACS-MIB.mib \
	FDRY-TRAP-MIB.mib \
	FIBRE-CHANNEL-FE-MIB.mib \
	FILE-SYSTEM-MIB.mib \
	FILTER-MIB.mib \
	FORTINET-CORE-MIB.mib \
	FORTINET-FORTIGATE-MIB.mib \
	FOUNDRY-BFD-STD-MIB.mib \
	FOUNDRY-CAR-MIB.mib \
	FOUNDRY-LAG-MIB.mib \
	Foundry-MPLS-MIB.mib \
	FOUNDRY-SN-AGENT-MIB.mib \
	FOUNDRY-SN-APPLETALK-MIB.mib \
	FOUNDRY-SN-ARP-GROUP-MIB.mib \
	FOUNDRY-SN-BGP4-GROUP-MIB.mib \
	FOUNDRY-SN-CAM-MIB.mib \
	FOUNDRY-SN-IGMP-MIB.mib \
	FOUNDRY-SN-IP-MIB.mib \
	FOUNDRY-SN-IP-ACL-MIB.mib \
	FOUNDRY-SN-IP-VRRP-MIB.mib \
	FOUNDRY-SN-IPX-MIB.mib \
	FOUNDRY-SN-MAC-AUTHENTICATION-MIB.mib \
	FOUNDRY-SN-MRP-MIB.mib \
	FOUNDRY-SN-NOTIFICATION-MIB.mib \
	FOUNDRY-SN-OSPF-GROUP-MIB.mib \
	FOUNDRY-SN-POS-GROUP-MIB.mib \
	FOUNDRY-SN-ROOT-MIB.mib \
	FOUNDRY-SN-STACKING-MIB.mib \
	FOUNDRY-SN-SW-L4-SWITCH-GROUP-MIB.mib \
	FOUNDRY-SN-SWITCH-GROUP-MIB.mib \
	FOUNDRY-SN-TRAP-MIB.mib \
	FOUNDRY-SN-VSRP-MIB.mib \
	FOUNDRY-SN-WIRELESS-GROUP-MIB.mib \
	FOUNDRY-VLAN-CAR-MIB.mib \
	FROGFOOT-RESOURCES-MIB.mib \
	FSC-RAID-MIB.mib \
	H3C-COMMON-SYSTEM-MIB.mib \
	H3C-CONFIG-MAN-MIB.mib \
	H3C-ENTITY-EXT-MIB.mib \
	H3C-ENTITY-VENDORTYPE-OID-MIB.mib \
	H3C-IF-EXT-MIB.mib \
	H3C-IP-ADDRESS-MIB.mib \
	H3C-IPV6-ADDRESS-MIB.mib \
	H3C-OBJECT-INFO-MIB.mib \
	H3C-SSH-MIB.mib \
	H3C-STACK-MIB.mib \
	H3C-SYS-MAN-MIB.mib \
	H3C-SYSLOG-MIB.mib \
	H3C-TRAP-MIB.mib \
	HA-MIB.mib \
	HC-RMON-MIB.mib \
	HC-PerfHist-TC-MIB.mib \
	HCNUM-TC.mib \
	HH3C-CFCARD-MIB.mib \
	HH3C-COMMON-SYSTEM-MIB.mib \
	HH3C-DISK-MIB.mib \
	HH3C-ENTITY-EXT-MIB.mib \
	HH3C-ENTITY-VENDORTYPE-OID-MIB.mib \
	HH3C-FCOE-MIB.mib \
	HH3C-FCOE-MODE-MIB.mib \
	HH3C-GRE-MIB.mib \
	HH3C-IF-EXT-MIB.mib \
	HH3C-IP-ADDRESS-MIB.mib \
	HH3C-IP-BROADCAST-MIB.mib \
	HH3C-IPV6-ADDRESS-MIB.mib \
	HH3C-IPX-MIB.mib \
	HH3C-L2TP-MIB.mib \
	HH3C-LAG-MIB.mib \
	HH3C-LICENSE-MIB.mib \
	HH3C-LLDP-EXT-MIB.mib \
	HH3C-LSW-DEV-ADM-MIB.mib \
	HH3C-MAC-INFORMATION-MIB.mib \
	HH3C-NET-MAN-MIB.mib \
	HH3C-NS-MIB.mib \
	HH3C-NTP-MIB.mib \
	HH3C-OBJECT-INFO-MIB.mib \
	HH3C-OID-MIB.mib \
	HH3C-POWER-ETH-EXT-MIB.mib \
	HH3C-PRODUCT-ID-MIB.mib \
	HH3C-RAID-MIB.mib \
	HH3C-REDUNDANCY-POWER-MIB.mib \
	HH3C-SESSION-MIB.mib \
	HH3C-SNMP-EXT-MIB.mib \
	HH3C-SSH-MIB.mib \
	HH3C-STACK-MIB.mib \
	HH3C-STORAGE-MIB.mib \
	HH3C-STORAGE-REF-MIB.mib \
	HH3C-SYS-MAN-MIB.mib \
	HH3C-SYSLOG-MIB.mib \
	HH3C-TRANSCEIVER-INFO-MIB.mib \
	HH3C-TRAP-MIB.mib \
	HH3C-TUNNEL-MIB.mib \
	HH3C-UNICAST-MIB.mib \
	HH3C-UPS-MIB.mib \
	HH3C-USER-MIB.mib \
	HH3C-USERLOG-MIB.mib \
	HH3C-VMAP-MIB.mib \
	HH3C-VRRP-EXT-MIB.mib \
	HIRSCHMANN-DISCOVERY-MGMT-MIB.mib \
	HIRSCHMANN-DVMRP-MIB.mib \
	HIRSCHMANN-GENERIC-ERROR-MIB.mib \
	HIRSCHMANN-MGMT-MIB.mib \
	HIRSCHMANN-MMP4-BASICL2-MIB.mib \
	HIRSCHMANN-MMP4-QOS-MIB.mib \
	HIRSCHMANN-MMP4-ROUTING-MIB.mib \
	HIRSCHMANN-MULTICAST-MIB.mib \
	HIRSCHMANN-PIM-MIB.mib \
	HIRSCHMANN-SNMP-RETURN-SET-MIB.mib \
	HISTORICAL-COUNTER-MIB.mib \
	HMDHCPS-SNMP-MIB.mib \
	HMIOMODULE-SNMP-MIB.mib \
	HMLLDP-MIB.mib \
	HMPRIV-MGMT-SNMP-MIB.mib \
	HMRING-MGMT-SNMP-MIB.mib \
	HMRINGARC-MGMT-SNMP-MIB.mib \
	HMTRACKING-SNMP-MIB.mib \
	HOST-RESOURCES-MIB.mib \
	HOST-RESOURCES-TYPES.mib \
	HP-AUTH-MIB.mib \
	HP-DOT1X-EXTENSIONS-MIB.mib \
	HP-ENTITY-MIB.mib \
	HP-ICF-8023-RPTR.mib \
	HP-ICF-ARP-PROTECT.mib \
	HP-ICF-AUTORUN.mib \
	HP-ICF-BASIC.mib \
	HP-ICF-BRIDGE.mib \
	HP-ICF-CHAIN.mib \
	HP-ICF-CHASSIS.mib \
	HP-ICF-DOWNLOAD.mib \
	HP-ICF-FTRCO.mib \
	HP-ICF-GENERIC-RPTR.mib \
	HP-ICF-IP-ROUTING.mib \
	HP-ICF-IPCONFIG.mib \
	HP-ICF-JUMBO-MIB.mib \
	HP-ICF-LINKTEST.mib \
	HP-ICF-OID.mib \
	HP-ICF-OSPF.mib \
	HP-ICF-POE-MIB.mib \
	HP-ICF-PROVIDER-BRIDGE.mib \
	HP-ICF-SECURITY.mib \
	HP-ICF-SNMP-MIB.mib \
	HP-ICF-STACK.mib \
	HP-ICF-SYSLOG-MIB.mib \
	HP-ICF-TC.mib \
	HP-ICF-UDP-FORWARD.mib \
	HP-ICF-USBPORT.mib \
	HP-ICF-VRRP-MIB.mib \
	HP-ICF-XRRP.mib \
	HP-LASERJET-COMMON-MIB.mib \
	HP-SNTPclientConfiguration-MIB.mib \
	HP-SwitchStack-MIB.mib \
	HP-VLAN.mib \
	HpicfHighAvailability-MIB.mib \
	HUAWEI-3COM-OID-MIB.mib \
	HUAWEI-VLAN-MIB.mib \
	IANA-ADDRESS-FAMILY-NUMBERS-MIB.mib \
	IANA-ITU-ALARM-TC-MIB.mib \
	IANA-LANGUAGE-MIB.mib \
	IANA-PWE3-MIB.mib \
	IANA-RTPROTO-MIB.mib \
	IANAifType-MIB.mib \
	IBM-6611-APPN-MIB.mib \
	IBM-CPS-MIB.mib \
	IBM-MIB.mib \
	IBMCPU-MIB.mib \
	ICF-ETWIST.mib \
	IEEE8021-CFM-MIB.mib \
	IEEE8021-PAE-MIB.mib \
	IEEE8023-LAG-MIB.mib \
	IEEE8021-MSTP-MIB.mib \
	IEEE8021-SPANNING-TREE-MIB.mib \
	IEEE8021-TC-MIB.mib \
	IEEE802dot11-MIB.mib \
	IF-MIB.mib \
	IGMP-MIB.mib \
	IGMPV3-MIB.mib \
	INET-ADDRESS-MIB.mib \
	INFOSEC-UPS.mib \
	INTEGRATED-SERVICES-MIB.mib \
	IOMEGANAS-MIB.mib \
	IP-FORWARD-MIB.mib \
	IP-MAC-BIND-MIB.mib \
	IP-MCST-VLAN-REP-MIB.mib \
	IP-MIB.mib \
	IPMROUTE-STD-MIB.mib \
	IPSEC-SPD-MIB.mib \
	IPV6-FLOW-LABEL-MIB.mib \
	IPV6-MLD-MIB.mib \
	IPV6-STATIC-ROUTE-MIB.mib \
	IPV6-TC.mib \
	IPV6-TCP-MIB.mib \
	IPV6-UDP-MIB.mib \
	IPX.mib \
	JUNIPER-ALARM-MIB.mib \
	JUNIPER-CHASSIS-DEFINES-MIB.mib \
	JUNIPER-EX-SMI.mib \
	JUNIPER-FABRIC-CHASSIS.mib \
	JUNIPER-FABRIC-MIB.mib \
	JUNIPER-IF-MIB.mib \
	JUNIPER-IVE-MIB.mib \
	JUNIPER-L2ALD-MIB.mib \
	JUNIPER-MAC-MIB.mib \
	JUNIPER-MIB.mib \
	JUNIPER-POWER-SUPPLY-UNIT-MIB.mib \
	JUNIPER-SMI.mib \
	JUNIPER-VLAN-MIB.mib \
	JVM-MANAGEMENT-MIB.mib \
	JWAC-MIB.mib \
	L2PROTOCOL-TUNNEL-MIB.mib \
	LAG-MIB.mib \
	LANNET-MIB.mib \
	LINK-INCIDENT-MIB.mib \
	LINKSYS-MODEL-MIB.mib \
	LLDP-EXT-DOT1-MIB.mib \
	LLDP-EXT-DOT3-MIB.mib \
	LLDP-EXT-MED-MIB.mib \
	LLDP-MIB.mib \
	LLDP-V2-MIB.mib \
	LLDP-V2-TC-MIB.mib \
	LOCAL-LOOPBACK-MIB.mib \
	LOOPBACK-DETECT-MIB.mib \
	LSI-AdapterSAS.mib \
	LSI-AdapterSASIR.mib \
	Mac-Based-Authentication-MIB.mib \
	MAU-MIB.mib \
	MCAST-FILTER-MIB.mib \
	MCAST-PROXY-MIB.mib \
	MCAST-SNOOPING-MIB.mib \
	MCAST-VLAN-MIB.mib \
	MIKROTIK-MIB.mib \
	MLD-SNOOPING-MIB.mib \
	MSSQLSERVER-MIB.mib \
	MSTP-MIB.mib \
	MTA-MIB.mib \
	MQX-MIB.mib \
	NAS-MIB.mib \
	NET-SNMP-AGENT-MIB.mib \
	NET-SNMP-MIB.mib \
	NET-SNMP-MONITOR-MIB.mib \
	NET-SNMP-SYSTEM-MIB.mib \
	NET-SNMP-TC.mib \
	NETONIX-SWITCH-MIB.mib \
	NETSCREEN-ADDR-MIB.mib \
	NETSCREEN-INTERFACE-MIB.mib \
	NETSCREEN-NAT-MIB.mib \
	NETSCREEN-PRODUCTS-MIB.mib \
	NETSCREEN-RESOURCE-MIB.mib \
	NETSCREEN-SCHEDULE-MIB.mib \
	NETSCREEN-SERVICE-MIB.mib \
	NETSCREEN-SMI.mib \
	NETSCREEN-TRAP-MIB.mib \
	NETSCREEN-VPN-MON-MIB.mib \
	NETSCREEN-VR-MIB.mib \
	NETSCREEN-VSYS-MIB.mib \
	NETSWITCH-MIB.mib \
	NETUP-MIB.mib \
	NETXMS-MIB.mib \
	NetWare-Server-MIB.mib \
	NETWORK-APPLIANCE-MIB.mib \
	NETWORK-SERVICES-MIB.mib \
	NLB-MIB.mib \
	NOKIA-IPSO-REGISTRATION-MIB.mib \
	NOKIA-IPSO-SYSTEM-MIB.mib \
	NOTIFICATION-LOG-MIB.mib \
	NTWS-AP-CONFIG-MIB.mib \
	NTWS-AP-IF-MIB.mib \
	NTWS-AP-STATUS-MIB.mib \
	NTWS-AP-TC.mib \
	NTWS-AP-UNCONFIGURED-MIB.mib \
	NTWS-BASIC-MIB.mib \
	NTWS-BASIC-TC.mib \
	NTWS-CLIENT-SESSION-MIB.mib \
	NTWS-CLIENT-SESSION-TC.mib \
	NTWS-EXTERNAL-SERVER-MIB.mib \
	NTWS-INFO-RF-DETECT-MIB.mib \
	NTWS-LICENSE-FEATURE-TC-MIB.mib \
	NTWS-PORT-MIB.mib \
	NTWS-REGISTRATION-CHASSIS-MIB.mib \
	NTWS-REGISTRATION-DEVICES-MIB.mib \
	NTWS-RF-DETECT-TC.mib \
	NTWS-ROOT-MIB.mib \
	NTWS-SYSTEM-MIB.mib \
	NTWS-TRAP-MIB.mib \
	NTWS-TRAPLOG-MIB.mib \
	OKIDATA-MIB.mib \
	OPTIMUX-MIB.mib \
	OSPF-MIB.mib \
	OSPF-TRAP-MIB.mib \
	OSPFV3-MIB.mib \
	P-BRIDGE-MIB.mib \
	PerfHist-TC-MIB.mib \
	PIM-MIB.mib \
	PIM-SM-MIB.mib \
	PKT-STORM-CTRL-MIB.mib \
	PoE-MIB.mib \
	POLICY-ROUTE-MIB.mib \
	POLYCOM-RMX-MIB.mib \
	PORT-SECURITY-MIB.mib \
	PORTGROUP-MIB.mib \
	POWER-ETHERNET-MIB.mib \
	PowerNet-MIB.mib \
	POWERSUPPLY-MIB.mib \
	PPPOE-MGMT-MIB.mib \
	Printer-MIB.mib \
	PRIVATE-VLAN-MIB.mib \
	PW-ENET-STD-MIB.mib \
	PW-STD-MIB.mib \
	PW-TC-STD-MIB.mib \
	Q-BRIDGE-MIB.mib \
	Q-IN-Q-MIB.mib \
	QoS-MIB.mib \
	RADENSOLUTIONS-SMI.mib \
	RADIUS-ACC-CLIENT-MIB.mib \
	RADIUS-ACC-SERVER-MIB.mib \
	RADIUS-ACCOUNTING-MIB.mib \
	RADIUS-AUTH-CLIENT-MIB.mib \
	RADIUS-AUTH-SERVER-MIB.mib \
	RADIUS-DYNAUTH-CLIENT-MIB.mib \
	RADIUS-DYNAUTH-SERVER-MIB.mib \
	RADLAN-CPU-COUNTERS-MIB.mib \
	RADLAN-Dell-Private-MIB.mib \
	RADLAN-HWENVIROMENT.mib \
	RADLAN-MIB.mib \
	RADLAN-PHY-MIB.mib \
	RADLAN-Physicaldescription-MIB.mib \
	RADLAN-rlInterfaces.mib \
	RADLAN-rndMng.mib \
	RADLAN-SENSORENTMIB.mib \
	RADLAN-SNMP-MIB.mib \
	RADLAN-SNMPv2.mib \
	RADLAN-TRUNK-MIB.mib \
	RADLAN-vlan-MIB.mib \
	RAPID-CITY-BAY-STACK.mib \
	RAPID-CITY.mib \
	RC-MLT-MIB.mib \
	RCP-MIB.mib \
	RDBMS-MIB.mib \
	RFC-1212.mib \
	RFC-1215.mib \
	RFC1155-SMI.mib \
	RFC1213-MIB.mib \
	RFC1271-MIB.mib \
	RFC1354-MIB.mib \
	RIPNG-MIB.mib \
	RIPv2-MIB.mib \
	RITTAL-CMC-III-CAPABILITY-MIB.mib \
	RITTAL-CMC-III-MIB.mib \
	RITTAL-CMC-III-PRODUCTS-MIB.mib \
	RITTAL-CMC-TC-MIB.mib \
	Rittal-IT-Chiller.mib \
	RITTAL-SMI-MIB.mib \
	RMON-MIB.mib \
	RMON2-MIB.mib \
	RS-232-MIB.mib \
	RSPAN-MGMT-MIB.mib \
	S5-AGENT-MIB.mib \
	S5-CHASSIS-MIB.mib \
	S5-CHASSIS-TRAP-MIB.mib \
	S5-ETH-MULTISEG-TOPOLOGY-MIB.mib \
	S5-ETH-REDUNDANT-LINKS-MIB.mib \
	S5-ETHERNET-COMMON-MIB.mib \
	S5-ETHERNET-MIB.mib \
	S5-ETHERNET-TRAP-MIB.mib \
	S5-REG-MIB.mib \
	S5-ROOT-MIB.mib \
	S5-SWITCH-BAYSECURE-MIB.mib \
	S5-TCS-MIB.mib \
	SAF-ALARM-MIB.mib \
	SAF-ENTERPRISE.mib \
	SAF-INTEGRA-MIB.mib \
	SAF-INTEGRAB-MIB.mib \
	SAF-INTEGRAW-MIB.mib \
	SAFEGUARD-ENGINE-MIB.mib \
	SAVEPOWER-MIB.mib \
	SDCARDMGMT-MIB.mib \
	SEMI-MIB.mib \
	SFLOW-MIB.mib \
	SFTPServer-MIB.mib \
	SINGLE-IP-MIB.mib \
	SMON-MIB.mib \
	SMTP-MIB.mib \
	SNMP-COMMUNITY-MIB.mib \
	SNMP-FRAMEWORK-MIB.mib \
	SNMP-MPD-MIB.mib \
	SNMP-NOTIFICATION-MIB.mib \
	SNMP-PROXY-MIB.mib \
	SNMP-REPEATER-MIB.mib \
	SNMP-TARGET-MIB.mib \
	SNMP-USER-BASED-SM-MIB.mib \
	SNMP-VIEW-BASED-ACM-MIB.mib \
	SNMPv2-CONF.mib \
	SNMPv2-MIB.mib \
	SNMPv2-SMI.mib \
	SNMPv2-TC.mib \
	SNMPv2-TM.mib \
	SRC-IPIF-MIB.mib \
	SRED-MIB.mib \
	SSH-MIB.mib \
	SSL-MIB.mib \
	STATIC-MAC-BASED-VLAN-MIB.mib \
	STATICFDB-MIB.mib \
	STATISTICS-MIB.mib \
	SUBNETVLAN-MIB.mib \
	SUN-HW-CTRL-MIB.mib \
	SUN-HW-TRAP-MIB.mib \
	SUN-PLATFORM-MIB.mib \
	SUPERVLAN-MIB.mib \
	SURVEILLANCE-VLAN-MIB.mib \
	SW-MIB.mib \
	SWDES3528-52PRIMGMT-MIB.mib \
	SWDGS3120PRIMGMT-MIB.mib \
	SWPRIMGMT-DES30XXP-MIB.mib \
	SWPRIMGMT-DES3200-MIB.mib \
	SWPROTOCOLVLAN-MIB.mib \
	SYMBOL-CC-WS2000-MIB.mib \
	SYMBOL-WS5000-MIB.mib \
	SYNOLOGY-DISK-MIB.mib \
	SYNOLOGY-RAID-MIB.mib \
	SYNOLOGY-SYSTEM-MIB.mib \
	SYNOLOGY-UPS-MIB.mib \
	SYNOPTICS-COMMON-MIB.mib \
	SYNOPTICS-ROOT-MIB.mib \
	SYSAPPL-MIB.mib \
	SYSLOG-MIB.mib \
	T11-FC-FABRIC-ADDR-MGR-MIB.mib \
	T11-FC-NAME-SERVER-MIB.mib \
	T11-TC-MIB.mib \
	TCP-MIB.mib \
	TELTONIKA-MIB.mib \
	TIME-MIB.mib \
	TIMERANGE-MIB.mib \
	TOKEN-RING-RMON-MIB.mib \
	TOKENRING-STATION-SR-MIB.mib \
	TUNNEL-MIB.mib \
	UBNT-AirMAX-MIB.mib \
	UBNT-EdgeMAX-MIB.mib \
	UBNT-MIB.mib \
	UCD-DISKIO-MIB.mib \
	UCD-DLMOD-MIB.mib \
	UCD-IPFILTER-MIB.mib \
	UCD-IPFWACC-MIB.mib \
	UCD-SNMP-MIB.mib \
	UDP-Helper-MIB.mib \
	UDP-MIB.mib \
	UPS-MIB.mib \
	USEC-MIB.mib \
	V2ADMIN-MIB.mib \
	VLAN-COUNTER-MIB.mib \
	VMWARE-AGENTCAP-MIB.mib \
	VMWARE-CIMOM-MIB.mib \
	VMWARE-ENV-MIB.mib \
	VMWARE-OBSOLETE-MIB.mib \
	VMWARE-PRODUCTS-MIB.mib \
	VMWARE-RESOURCES-MIB.mib \
	VMWARE-ROOT-MIB.mib \
	VMWARE-SRM-EVENT-MIB.mib \
	VMWARE-SYSTEM-MIB.mib \
	VMWARE-TC-MIB.mib \
	VMWARE-VC-EVENT-MIB.mib \
	VMWARE-VCOPS-EVENT-MIB.mib \
	VMWARE-VMINFO-MIB.mib \
	VOICE-VLAN-MIB.mib \
 	VPLS-GENERIC-DRAFT-01-MIB.mib \
	VPN-TC-STD-MIB.mib \
	VRRP-MIB.mib \
	WebBase-Access-Control-MIB.mib \
	WF-COM.mib \
	WLSR-AP-MIB.mib \
	WLSX-AUTH-MIB.mib \
	WLSX-CTS-MIB.mib \
	WLSX-ESI-MIB.mib \
	WLSX-HA-MIB.mib \
	WLSX-IFEXT-MIB.mib \
	WLSX-MESH-MIB.mib \
	WLSX-MOBILITY-MIB.mib \
	WLSX-MON-MIB.mib \
	WLSX-RS-MIB.mib \
	WLSX-SNR-MIB.mib \
	WLSX-STATS-MIB.mib \
	WLSX-SWITCH-MIB.mib \
	WLSX-SYSTEMEXT-MIB.mib \
	WLSX-TRAP-MIB.mib \
	WLSX-TUNNELEDNODE-MIB.mib \
	WLSX-USER-MIB.mib \
	WLSX-USER6-MIB.mib \
	WLSX-VOICE-MIB.mib \
	WLSX-WLAN-MIB.mib \
	WRED-MIB.mib \
	WS-CC-RF-MIB.mib \
	WS-CC-SMI.mib \
	WS-CC-STATS-MIB.mib \
	WS-INFRA-AUTO-UPDATE-MIB.mib \
	WS-INFRA-CLUSTER-MIB.mib \
	WS-INFRA-DIAG-MIB.mib \
	WS-INFRA-FILE-MGMT-MIB.mib \
	WS-INFRA-LIC-MIB.mib \
	WS-INFRA-NTP-MIB.mib \
	WS-INFRA-PM-MIB.mib \
	WS-INFRA-SMI-MIB.mib \
	WS-INFRA-SYSMSG-MIB.mib \
	WS-MGMT-MIB.mib \
	WS-SEC-VPN-MIB.mib \
	WS-SMI.mib \
	WS-SW-ACL-MIB.mib \
	WS-SW-ARP-MIB.mib \
	WS-SW-AUTHENTICATEDNTP-MIB.mib \
	WS-SW-DHCP-MIB.mib \
	WS-SW-DHCPSERVER-MIB.mib \
	WS-SW-DNS-MIB.mib \
	WS-SW-GRE-MIB.mib \
	WS-SW-GUEST-USER-RAD-MIB.mib \
	WS-SW-IF-MIB.mib \
	WS-SW-IP-MIB.mib \
	WS-SW-MOBILITY-MIB.mib \
	WS-SW-PORTVLAN-MIB.mib \
	WS-SW-RADIUS-MIB.mib \
	WS-SW-SMI.mib \
	WS-SW-SNMP-SAVE-MIB.mib \
	WS-TRAP-MIB.mib \
	WS-TYPE-MIB.mib \
	WS-USER-MGMT-MIB.mib \
	WWW-MIB.mib \
	XPPC-MIB.mib \
	ZONE-DEFENSE-MGMT-MIB.mib \
	ZYXEL-MIB.mib \
	ZYXEL-ZYWALL-ZLD-COMMON-MIB.mib
 
EXTRA_DIST=$(mibs_DATA)

install-data-hook:
	if test "x@BUILD_SERVER@" = "xyes"; then $(INSTALL) -d $(DESTDIR)$(localstatedir)/lib/netxms; LD_LIBRARY_PATH="$(DESTDIR)$(libdir):@INSTALL_LIBPATH@:${LD_LIBRARY_PATH}" $(DESTDIR)$(bindir)/nxmibc -z -d $(DESTDIR)$(pkgdatadir)/mibs -d $(DESTDIR)$(localstatedir)/lib/netxms/mibs -o $(DESTDIR)$(localstatedir)/lib/netxms/netxms.cmib; fi
