# Copyright (C) 2004, 2005 NetXMS Team <bugs@netxms.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

musicdir=$(pkgdatadir)/files

music_DATA = \
	Warning-A.wav \
	Warning-B.wav \
	Warning-C.wav \
	Warning-D.wav \
	Warning-E.wav \
	Warning-F.wav \
    Warning-Notification-A.wav \
    Warning-Notification-B.wav \
    Warning-Notification-C.wav \
    Warning-Notification-D.wav \
    Warning-Notification-F.wav 
    
 
EXTRA_DIST=$(music_DATA)
