# Copyright (C) 2004, 2005 NetXMS Team <bugs@netxms.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

templatesdir=$(pkgdatadir)/templates

templates_DATA = \
	aix.xml \
	generic_unix.xml \
	hpux.xml \
	linux.xml \
	netxms_server.xml \
	windows.xml

EXTRA_DIST = $(templates_DATA)
