# Copyright (C) 2004, 2005 NetXMS Team <bugs@netxms.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

templatesdir=$(pkgdatadir)/templates

templates_DATA = \
	aix.xml \
	apc.xml \
	brocade_icx.xml \
	cisco_gsm.xml \
	cyberpower.xml \
	dell_hw.xml \
	dell_idrac.xml \
	eaton_ups.xml \
	generic_unix.xml \
	hp_ilo.xml \
	hpux.xml \
	intel_baseboard.xml \
	interface_traffic.xml \
	lenovo_xcc.xml \
	linux.xml \
	lsi_megaraid.xml \
	netgear_nas.xml \
	netxms_agent.xml \
	netxms_file_handle_usage.xml \
	netxms_server.xml \
	object_tools.xml \
	printers.xml \
	qnap.xml \
	rapl_energy_consumption.xml \
	ruckus_zonedirector.xml \
	sonicwall.xml \
	sophos.xml \
	synology.xml \
	tplink.xml \
	ubiquity.xml \
	unifi.xml \
	watchguard.xml \
	wd_mycloud.xml \
	windows.xml \
	xirrus.xml

EXTRA_DIST = $(templates_DATA)
