# Copyright (C) 2004 NetXMS Team <bugs@netxms.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = \
	coding_style.txt \
	dci_perftab.txt \
	db_format_change.txt \
	event_code_ranges.txt \
	ipso.txt \
	netxms_architecture.gxml \
	netxms_architecture.png \
	netxms_architecture.svg \
	nxcp_command_ranges.txt \
	unicode.txt
